--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ sha2 = "0.10"
 dirs = "6.0.0"
 hex = "0.4.3"
 ignore = "0.4.23"
-reqwest = { version = "0.12.20", features = ["blocking"] }
+reqwest = { version = "0.12.20", features = ["blocking", "rustls-tls"], default-features = false }
 toml = "0.8.23"
 tar = "0.4.44"
 flate2 = "1.1.2"
