--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,9 @@ indicatif = "0.18.0"
 atty = "0.2.14"
 chrono = { version = "0.4.42", features = ["serde"] }
 tabled = "0.12.2"
+aws-config = "1.8.12"
+aws-sdk-bedrockruntime = "1.121.0"
+tokio = { version = "1.49.0", features = ["full"] }
 
 [dev-dependencies]
 cargo-fuzz = "0.13.1"
