--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,7 @@ tabled = "0.12.2"
 aws-config = "1.8.12"
 aws-sdk-bedrockruntime = "1.121.0"
 tokio = { version = "1.49.0", features = ["full"] }
+lzma-rs = "0.3.0"
 
 [dev-dependencies]
 cargo-fuzz = "0.13.1"
